--- a/src/scss/Board.scss
+++ b/src/scss/Board.scss
@@ -1,9 +1,209 @@
-.board {
-  display: grid;
-  grid-template-columns: repeat(7, 1fr);
+@import "./_color-palette";
+html {
+  font-family: "Roboto", sans-serif;
+
+  font-size: 10px;
+  background-color: color(main-color);
+  box-sizing: border-box;
+  overflow: hidden;
 }
 
+.board-page {
+  margin: 0 auto;
+  margin-top: 3.5rem;
+  width: 90rem;
+  display: grid;
+  grid-template-columns: repeat(3, auto);
+  grid-template-rows: auto 1fr;
+  row-gap: 6rem;
+  column-gap: 5rem;
+  justify-content: center;
+  position: relative;
+}
+.player-1_score-card {
+  justify-self: center;
+  margin-top: 15rem;
+  grid-column: 1;
+  grid-row: 2;
+}
+.player-2_score-card {
+  justify-self: center;
+  margin-top: 15rem;
+  grid-column: 3;
+  grid-row: 2;
+}
+
+.header {
+  width: 50rem;
+  margin-top: 2rem;
+  height: 3rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  grid-column: 2/3;
+  grid-row: 1;
+
+  &_button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: color(main-color-darker);
+    border-radius: 20px;
+    color: white;
+    font-size: 1.2rem;
+    text-transform: uppercase;
+    font-family: "Roboto", sans-serif;
+    border: none;
+    padding: 1rem 1.5rem;
+  }
+}
+
+.board {
+  position: relative;
+  width: 48rem;
+  display: grid;
+  justify-items: center;
+  grid-template-columns: repeat(7, 1fr);
+  padding: 1rem;
+  padding-bottom: 3rem;
+  background-color: transparent;
+  border-radius: 20px;
+  box-shadow: 0 9px 0 0 black;
+  border: 3px solid black;
+  padding-bottom: 5rem;
+  background-color: white;
+  grid-column: 2/3;
+  grid-row: 2;
+}
+.pointer_column {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  .pointer_svg {
+    display: none;
+    position: absolute;
+    top: -9%;
+  }
+
+  &:hover {
+    .pointer_svg {
+      display: block;
+    }
+  }
+}
 .board-column {
   display: flex;
   flex-direction: column-reverse;
+  width: 5rem;
+  justify-self: center;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+  background-color: transparent;
+  position: relative;
+}
+
+.cell {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 5rem;
+  width: 5rem;
+  border-radius: 50%;
+  background-color: color(main-color);
+  border: 3px solid black;
+  box-shadow: inset 0 4px 0 0 rgba(0, 0, 0, 0.5);
+}
+
+.player-1_piece {
+  background-color: color(player-1);
+  box-shadow: inset 0 4px 0 0 rgba(0, 0, 0, 0.5);
+}
+
+.player-2_piece {
+  background-color: color(player-2);
+  box-shadow: inset 0 4px 0 0 rgba(0, 0, 0, 0.5);
+}
+
+.drop-animation {
+  animation-name: dropAnimation;
+  animation-duration: 0.4s;
+  animation-timing-function: ease;
+  animation-fill-mode: forwards;
+}
+
+@keyframes dropAnimation {
+  0% {
+    transform: translateY(-1000%);
+  }
+  100% {
+    transform: translateY(0%);
+  }
+}
+
+.board-svg {
+  position: absolute;
+  z-index: 2;
+  left: 356px;
+  top: 129px;
+  pointer-events: none;
+}
+
+.turn-timer_svg {
+  position: absolute;
+  height: 137px;
+  box-shadow: 0 10px 0 0 black;
+  border-radius: 25px;
+  top: 105%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.player-turn-timer {
+  position: absolute;
+  z-index: 2;
+  top: 105%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.player_turn {
+  font-family: "Roboto", sans-serif;
+  color: white;
+  font-size: 1.1rem;
+  margin-top: 2.4rem;
+}
+
+.footer-platform {
+  position: absolute;
+  top: 73%;
+  width: 100vw;
+  height: 30rem;
+  background-color: color(main-color-darker);
+  z-index: -1;
+  border-radius: 60px;
+}
+
+.winner_modal-window {
+  position: absolute;
+  top: 107%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.winner_player-1 {
+  background-color: color(player-1);
+}
+
+.winner_player-2 {
+  background-color: color(player-2);
+}
+
+.rules {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
